--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
+    "@capacitor/live-updates": "^0.2.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
     "angular-cli-ghpages": "^2.0.0-beta.2",
