--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,14 +1,6 @@
 {
     "appId": "io.javiza.app",
     "appName": "javiza",
-    "webDir": "src",
-    "plugins": {
-     " LiveUpdates": {
-        "appId": "042a1261",
-        "channel": "Production",
-        "autoUpdateMethod": "background",
-        "maxVersions": 2
-      }
-    }
+    "webDir": "src"
   }
  
