--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@capacitor-community/sqlite": "^5.7.3-3",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/live-updates": "^0.2.1",
